--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,11 @@ header h1 {
   color: #eee;
 }
 
-.result-box--text {
+.reslut-box:hover {
+  cursor: pointer;
+}
+
+#result {
   background-color: #eee;
   border: 2px solid #333;
   border-radius: .3em;
@@ -68,6 +72,17 @@ header h1 {
   padding: 4px;
   width: 150px;
 }
+
+/* .result-balloon::before {
+  background: #444;
+  border: 1px solid #fefefe;
+  border-radius: 4px;
+  color: #fefefe;
+  content: "copied!";
+  position: absolute;
+  top: 30px;
+  z-index: 10;
+} */
 
 footer {
   margin-top: 40px;
